tests/machine/x/cobol/fun_call.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. FUN-CALL.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-ADD-RES PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       PERFORM FN_ADD USING 2 3
       DISPLAY FN_ADD_RES
       STOP RUN.
       
       FN_ADD.
           PROCEDURE DIVISION USING A B.
               COMPUTE FN_ADD_RES = A + B
               EXIT.
